1999-06-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Discrete2d.m ([Discrete2d setDiscrete2d:toFile:]): Use InFile
	+create:setName: instead of +create:withName:.

	* Int2dFiler.m ([Int2Filer -fileTo:]): Likewise.  Use raiseEvent
	macro instead of method.

1999-06-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* ConwayLife2d.h: Declare implemented methods.

1999-06-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Value2dDisplay.m ([Value -display]): Remove METHODS and USE_JAVA
	ifdefs.  Add a conditional on drawPointImp, in case it came
	up NULL due to a JavaProxy.

1999-06-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Discrete2d.m ([Discrete2d hdf5In{Create}:]): Handle compound
	data types.
	
1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES, lib_LTLIBRARIES): Substitute
	{inst,noinst}LIBS.
	(EXTRA_LTLIBRARIES): New variable.
	(libspace_la_LDFLAGS): Substitute inst_LDFLAGS.

1999-05-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Add -I$(top_builddir)/libobjc.

1999-05-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES): Switch from lib_LTLIBRARIES.

1999-05-05  Alex Lancaster  <alex@santafe.edu>

	* space.h (Ca2d): Remove CREATABLE tag in protocol definition,
	since this protocol is intended to be abstract.
	(Discrete2d): Add example of Lisp output serialization.
	(Int2dFiler): Note as deprecated protocol, point user to
	Discrete2d serialization.

1999-05-04  Alex Lancaster  <alex@santafe.edu>

	* Discrete2d.m ([Discrete2d -_lispInLatticeObjects_:]): Use
	putObject:atX:Y: method rather than discrete2dSiteAt macro, so can
	be overriden in subclasses.
	([Discrete2d -hdf5In:]): Likewise.
	([Discrete2d -_lispOutLatticeObjects_:]): Use getObjectAtX:Y:
	method rather than discrete2dSiteAt macro.
	([Discrete2d -hdf5OutDeep:]): Likewise.
	
1999-05-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
